reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_1999_col_9.log

*** crates/tracewake-core/src/scheduler.rs:1999:9: replace no_human::build_routine_step_started_event -> EventEnvelope with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_routine_step_started_event -> EventEnvelope with Default::default()
@@ -1991,38 +1991,17 @@
         process_id: &ProcessId,
         execution_id: &RoutineExecutionId,
         actor_id: &ActorId,
         window: &DayWindow,
         proposal: &Proposal,
         content_manifest_id: &ContentManifestId,
         ordinary_event: &EventEnvelope,
     ) -> EventEnvelope {
-        let semantic_action_id = SemanticActionId::new(proposal.action_id.as_str()).unwrap();
-        let mut event = routine_step_event(
-            EventKind::RoutineStepStarted,
-            process_id,
-            execution_id,
-            actor_id,
-            window,
-            proposal,
-            content_manifest_id,
-            ordinary_event,
-            "routine_step_started",
-        );
-        event.payload = vec![
-            PayloadField::new("routine_execution_id", execution_id.as_str()),
-            PayloadField::new("actor_id", actor_id.as_str()),
-            PayloadField::new("action_id", semantic_action_id.as_str()),
-            PayloadField::new("progress_tick", window.start_tick.value().to_string()),
-            PayloadField::new("ordinary_event_id", ordinary_event.event_id.as_str()),
-            PayloadField::new("ordinary_action_id", proposal.action_id.as_str()),
-        ];
-        event.effects_summary = "routine step started with ordinary action ancestry".to_string();
-        event
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     #[allow(clippy::too_many_arguments)]
     fn build_routine_step_completed_event(
         process_id: &ProcessId,
         execution_id: &RoutineExecutionId,
         actor_id: &ActorId,
         window: &DayWindow,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905426.659924705s, 3s after last build at 1781905423.263924708s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `SemanticActionId`
   --> crates/tracewake-core/src/scheduler.rs:244:40
    |
244 |         ProcessId, RoutineExecutionId, SemanticActionId, StuckDiagnosticId,
    |                                        ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1999:9
     |
1999 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
    --> crates/tracewake-core/src/scheduler.rs:1999:9
     |
1999 |         Default::default() /* ~ changed by cargo-mutants ~ */
     |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
    --> crates/tracewake-core/src/events/envelope.rs:717:1
     |
 717 | pub struct EventEnvelope {
     | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
